# ots-cpp-basic

./: .clang-format  .gitignore  LICENSE  README.md
hw1/: main.cpp
hw2/: CMakeLists.txt  example.cpp  example.h  hello_world.cpp  move_me_out.cpp
src_template/: CMakeLists.txt
